change tmux settings

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,9 +1,6 @@
 set -g default-terminal "screen-256color"
 
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+set -g mouse on
 
 set -g history-limit 30000
 
@@ -11,6 +8,9 @@ set-option -g prefix C-a
 
 # fast reloads
 bind r source-file ~/.tmux.conf
+
+set -g base-index 1
+setw -g pane-base-index 1
 
 # copied from http://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
 
