Further customize tmux + vim interop

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -6,6 +6,8 @@ set -g history-limit 30000
 
 set-option -g prefix C-a
 
+setw -g aggressive-resize on
+
 # fast reloads
 bind r source-file ~/.tmux.conf
 
