--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,5 +1,5 @@
 set -g default-terminal "screen-256color"
-set -g mouse on
+#set -g mouse on
 set -g history-limit 30000
 set-option -g prefix C-a
 setw -g aggressive-resize on
@@ -22,7 +22,7 @@ set -g pane-active-border-fg brightred
 
 ## Status bar design
 # status line
-set -g status-utf8 on
+#set -g status-utf8 on
 set -g status-justify left
 set -g status-bg default
 set -g status-fg colour12
